--- a/Proyecto de Fabricación Digital/semana1.html
+++ b/Proyecto de Fabricación Digital/semana1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Proyecto de Fabricación Digital - Semana 1</title>
+    <title>Proyecto de Fabricación Digital</title>
 </head>
 <body>
     <div id="top">
@@ -22,63 +22,78 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../design.html">Design Thinking</a>
                     <ul>
-                        <li><a href="../design-thinking/practica1.html">Introducción</a></li>
-                        <li><a href="../design-thinking/practica2.html">Empatizar y Definir</a></li>
-                        <li><a href="../design-thinking/practica3.html">Idear</a></li>
-                        <li><a href="../design-thinking/practica4.html">Prototipar</a></li>
-                        <li><a href="../design-thinking/practica5.html">Testear</a></li>
-                    </ul>
-                 </li>
-                <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
-                    <ul>
-                        <li><a href="semana1.html">Semana 1</a></li>
-                        <li><a href="semana2.html">Semana 2</a></li>
-                        <li><a href="semana3.html">Semana 3</a></li>
-                        <li><a href="semana4.html">Semana 4</a></li>
-                        <li><a href="semana5.html">Semana 5</a></li>
-                        <li><a href="semana6.html">Semana 6</a></li>
+                    <li><a href="../design-thinking/practica1.html">1. Planteamiento del proyecto de design thinking</a></li>
+                    <li><a href="../design-thinking/practica2.html">2. Taller de design thinking</a></li>
+                    <li><a href="../design-thinking/practica3.html">3. Empatizar</a></li>
+                    <li><a href="../design-thinking/practica4.html">4. Definir</a></li>
+                    <li><a href="../design-thinking/practica5.html">5. Idear</a></li>
+                    <li><a href="../design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                </ul>
+             </li>
+            <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
+                <ul>
+                    <li><a href="semana1.html">1. Gestión de proyectos.</a></li>
+                    <li><a href="semana2.html">2. Desarrollo de planos 2D y/o 3D.</a></li>
+                    <li><a href="semana3.html">3. Ejecución de proyecto final.</a></li>
+                    <li><a href="semana4.html">4. Presentación del proyecto preliminar.</a></li>
+                    <li><a href="semana5.html">5. Desarrollo de la presentación final al público.</a></li>
+                    <li><a href="semana6.html">6. Preparación de Speech.</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
 
-    <div id="think">
+<div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Semana 1</h1>
+                <h1>1. Gestión de proyectos.</h1>
             </div>
+            <div class="think__title__content">
+                <p>“En este apartado estará la propuesta del diseño en corte laser por computador  explicado en una breve descripción de que va tratar, cuales con sus componentes, utilidad,  sector del cliente y el impacto social económico. Especificaciones de las capacidades de los integrantes. </p>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/Bosquejo.png" alt="">
+                <img src="../img/pp.jpg" alt="">
             </div>
             <div class="think__details">
-                <div class="think__details__icon">
-                    <i class="icon-chaplin-hat-movie-streamline"></i>
-                </div>
+                <!--div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div-->
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Diagrama de Gant - Propuesta de Fabricación Digital</p>
-                    <p class="think__details__info__cont">En este archivo se podrá visualizar uso de las técnicas para poder comenzar a implementar el proyecto del sistema de seguridad desde una aplicación móvil basándonos en la investigación realizada por parte de los integrantes del grupo aaaa .</p>
+                    <p class="think__details__info__title">1. La propuesta del proyecto de Proyecto de Fabricación Digital está orientado a lo Humano, tiene viabilidad y es funcional. Y se encuentran involucrados.</p>
+                    <p class="think__details__info__title">Título:</p>
+                    <p class="think__details__info__cont">RONADOMI.</p>
+                    <p class="think__details__info__title">Problema:</p>
+                    <p class="think__details__info__cont">El diseño que se presenta en el Fab Lab es la propuesta de una lámpara ecológica que genera electricidad y oxígeno al mismo tiempo. Esta ayudará a ahorrar energía y ayudar al medio ambiente. Se diseñará encima de una planta común, lo único que se necesita es la arena, el foco       será un diamante para darle una mejor estética pero también puede ser de cualquier forma</p>
+                    <p class="think__details__info__title">2.-La propuesta es de alto impacto social, económico.</p>
+                    <p class="think__details__info__title">Hipótesis:</p>
+                    <p class="think__details__info__cont">  La propuesta sobre lámparas ecológicas es de alto impacto social ya que implica el desarrollo de la tecnología y el uso de la energías limpias para brindar luz a zonas rurales que difícilmente tienen acceso a la red eléctrica y que recurren aun al uso de velas o candelabros con combustible, los cuales reportan muchos casos de accidentes fatales.
+                    La propuesta sobre lámparas ecológicas es de alto impacto  económico, porque es una idea de sostenibilidad con el ambiente y que puede contribuir con la iluminación o como fuente energética para cargar algun aparato electronico. Si se realiza un estudio de costos de producción y venta se puede obtener una utilidad de un margen positivo, por lo que es recomendable estudiar a profundidad el mercado de este nicho, así como experiencias de éxito del extranjero que permitan escalar la producción en una etapa más avanzada a posterior.
+                    </p>
+                    <p class="think__details__info__title">3. Elementos Adicionales para el desarrollo</p>
+                    <p class="think__details__info__cont">•    En el proyecto del fab lab “Lámpara ” tendrá los siguiente elementos adicionales:
+                        Se colocará por el medio del diseño un tubo transparente y por dentro irá enrrollado una cinta conformada por leds para que pueda tener un buen efecto nuestra lámpara será nuestro sistema electrico con el buen diseño que generará buena ilucminación ya luego se le podrá cambiar acompañando con lo del proyecto de design thinking de manera ecológica.  </p>
+. 
+                    </p>
+                    <p class="think__details__info__title">4. Desarrolla un Diagrama Gantt de actividades para el desarrollo del design thinking.</p>
+                    <p class="think__details__info__cont">• Cronología 
+                    </p><a href="https://drive.google.com/open?id=1BSBhvm9RC9sNoYm5G57BF2zNXvWAAf8x">Hacer click para ver el CRONOGRAMA.</a>
                 </div>
+                <p class="think__details__info__title">PERFIL</p>
+                     
+                    </p><a href="https://drive.google.com/open?id=1xhE7JgDRMFWO7aQm0gSf2Ad2N7mosQxc">Hacer click para ver el PERFIL.</a>
 
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Diagrama de Gant</p>
-                    <p class="think__details__extra__description">El diagrama de Gantt es una herramienta gráfica cuyo objetivo es exponer el tiempo de dedicación previsto para diferentes tareas o actividades a lo largo de un tiempo total determinado; en este caso lo utilizaremos para poner en marcha el proyecto del sistema de seguridad.</p>
-                    <a href="https://drive.google.com/open?id=1BSBhvm9RC9sNoYm5G57BF2zNXvWAAf8x" target="_blank">Archivo - Diagrama de Gantt</a>
-                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Bosquejo Inicial</p>
-                    <p class="think__details__extra__description">El bosquejo supone el primer paso concreto de la obra, es decir, la primera materialización de la idea del autor. En este caso el primer diseño del prototipo del posible circuito y el funcionamiento de la cámara.</p>
-                    <a href="https://drive.google.com/open?id=14Eef3PkTLIRkW4sHWVL5Cj_QThxmW68h" target="_blank">Documento - Bosquejo Inicial</a>
+                <!-- <div class="think__details__extra">
+                    <p class="think__details__extra__title">Respuestas</p>
+                    <p>En el presente documento se muestra el análisis total del problema, basándonos en las respuestas de los encuestados.</p>
+                    <a href="https://drive.google.com/open?id=1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Descomposición Funcional</p>
-                    <p class="think__details__extra__description">La descomposición funcional se refiere ampliamente al proceso de resolución de una relación funcional en sus partes constituyentes, de tal manera que la función original se puede reconstruir (es decir, recompuestos) de las partes en función de la composición.
-                    <br>
-                    En el proyecto se aplicó para poder reconocer los componentes y saber acerca de cada uno de ellos, así como se da su funcionamiento.</p>
-                    <a href="https://drive.google.com/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Documento - Bosquejo Inicial</a>
-                </div>
+                    <p class="think__details__extra__title">Respuestas Encuesta</p>
+                    <p>En el presente archvo muestra a detalle los resultados de la encuesta a los estudiantes, sobre el servicio de atención en ambas cafeterías.</p>
+                    <a href="https://drive.google.com/open?id=1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09" target="_blank" class="think__details__extra__description">Documento - Respuestas Encuesta</a>
+                </div> -->
             </div>
         </div>
     </div>
@@ -90,13 +105,13 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
                 </div>
             </div>
         </footer>
     <script src="../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
